css/style.css
/* Global uitilities */
*{
    box-sizing: border-box;
}
body,p,a{
    font-family: 'Poppins', sans-serif;
}
a{
    font-weight: 500;
}
p{
    font-size: 1rem;
}
/* Global utilies end */

/* header and navbar star */
header{
    background-color:#264653; 
    height: auto;
    width: 100%;
}
.navbar .nav-link{
    color: white;
    padding: 5 15px;
    border-radius: 50px 50px;
    margin: 0 10px;
    transition: .5s;
}
.brand-name{
    color: white ;
    text-decoration: none;
    font-size: 1.5rem;
}
.brand-name:hover{
    color: white ;
    transform: scale(1.1);
    transition: transform .5s;
   
}

.navbar .nav-link:hover{
    color: black;
   
}

#login-btn{
    margin-left: 5em;
    background: #E76F51;
    border-radius: 5px;
}

/* header and navbar end */


/* Landing Banner area start */

.modals-btn .purchase-btn,
.buy-btn{
    padding: 10px 45px;
    background-color:#E76F51 ;
    color: white;
}
.landing-banner p{
    font-weight: 300;
}
/* Landing area end */

/* Fetued bikes start */

.fetured-text{
    color: #E76F51;
}
.bike-img .grayscale{
    filter: grayscale(100%);
}
.bike-img img:hover{
    transform: scale(1.1);
    transition: transform .5s ease-in;
    
}

/* Feature bikes End */


/* Latest News section start */

.card{
    background: #FFFFFF;
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
    border-radius: 5px;
    padding: 1em;
}
.card-btn{
   
    border: 1px solid #E76F51;
    box-sizing: border-box;
    border-radius: 5px;
    color: #E76F51;
    padding: 10px 15px;
    font-size: 18px;
}
.card-btn:hover{
    background-color: #E76F51;
    color: white;
}

/* Latest news section end */

/* Clients section start */
.happy-title, .faq-title{
    color: #252B42;

}
.happy-title span{
    color: #E76F51;
}
.fas.filled{
    color: #E77C40;
}
.far.empty.empty{
    color: #E77C40;

}
.client-name{
    color: #23A6F0;

}
.profession{
    color: #252B42;
}
.client-bio{
    color: #6C6C6C;
}

#clients .card:hover{

    transform: scale(1.1);
    transition:  transform .5s ease-in;
    color: white;    

}

/* client section end */

/* FAQ section start */
.faq-title{
    font-size: 2.5rem;
}

.faq-title .faq-qstn{
    color: #E76F51;
}

.faq-qustion{
    color: #383838;
    font-weight: bold;
}
.accordion-bgc{
    background: #FFFFFF;
    border: 2px solid #D5E5FB;
    box-sizing: border-box;
    border-radius: 5px;
    margin-bottom: 25px;
    padding: 20px 24px;
}
.faq-qustion:not(.collapsed){
    color: #383838;

}


/* Honda bikes star */
.honda-bikes{
    background-color: #f8eaf1c7;
    height: auto;
}
.right-arrow, 
.left-arrow{
    color: rgba(0, 0, 0, 0.329);
}
/* Honda bike End */

/* sign up section */
.blog-sign-btn{
    background-color: #D21A1F;
    font-size: 1.5rem;
    font-weight: bold;
    letter-spacing: 1.1;
    color: white;
    height: 90px;
    
}
/* #headingFive .blog-sign-btn{
    color: white;
} */

